// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBadge component testing NotificationBadge dot 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBQB QcKGW"
  >
    text
    <span
      class="sc-gsTEea dbBgSv"
    />
  </div>
</DocumentFragment>
`;

exports[`NotificationBadge component testing NotificationBadge normal 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBQB QcKGW"
  >
    text
    <span
      class="sc-gsTEea gIYDVV"
    >
      1
    </span>
  </div>
</DocumentFragment>
`;
